--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -2,10 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
-    "import os"
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "CURR_DIR = os.getcwd()\n",
+    "CURR_DIR"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'/Users/willmcgrath/Documents/GitHub/math_693A_class/MATH-693A-Advanced-Numerical-Methods/python'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
@@ -14,7 +44,15 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.3"
+   "version": "3.8.3",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "kernelspec": {
    "name": "python3",
