--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -12,6 +12,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Setup"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "source": [
@@ -30,6 +37,34 @@
      "execution_count": 2
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Problem 1\n",
+    "\n",
+    "### Program the steepest descent and Newton algorithms using the backtracking line search. Use them to minimize the Rosenbrock function:\n",
+    "### <center> $f(x,y)=10(y-x^2)^2 + (1-x)^2$ <center>\n",
+    "### where initial step length $\\alpha_{0} = 1$, $\\overline{\\alpha} = 1$, $\\rho = \\frac{1}{2}$, $c = 10^{-4}$. Try the initial point $\\overline{x}_{0}^{T} = [1.2, 1.2]$ and then the more difficult point $\\overline{x}_{0}^{T} = [-1.2, 1]$. \n",
+    "\n",
+    "### The gradient of the Rosenbrock function is: \n",
+    "### <center> $\\nabla f = [\\frac{\\frac{\\partial f}{\\partial x}}{2}]$ <center>\n",
+    "\n",
+    "$\\nabla f = \\left[\\begin{array}{c} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 40x^3 - 40xy +2x - 2 \\\\ 20(y-x^2) \\end{array}\\right]$"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### a) Stop when: $|f(\\vec{x}_{k})| < 10^{-8}$. Print first 6 and last 6 values for  for steepest descent and Newton algorithms. Then determine the minimizer of the Rosenbrock function x*."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {}
   },
   {
