--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -49,7 +49,9 @@
     "### where initial step length $\\alpha_{0} = 1$, $\\overline{\\alpha} = 1$, $\\rho = \\frac{1}{2}$, $c = 10^{-4}$. Try the initial point $\\overline{x}_{0}^{T} = [1.2, 1.2]$ and then the more difficult point $\\overline{x}_{0}^{T} = [-1.2, 1]$. \n",
     "\n",
     "### The gradient of the Rosenbrock function is: \n",
-    "### <center> $\\nabla f = \\left[\\begin{array}{c} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 40x^3 - 40xy +2x - 2 \\\\ 20(y-x^2) \\end{array}\\right]$ <center>"
+    "### <center> $\\nabla f = \\left[\\begin{array}{c} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 40x^3 - 40xy +2x - 2 \\\\ 20(y-x^2) \\end{array}\\right]$ <center>\n",
+    "\n",
+    "# fef 3ef"
    ],
    "metadata": {}
   },
