--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -44,14 +44,13 @@
    "source": [
     "# Problem 1\n",
     "\n",
-    "### Program the steepest descent and Newton algorithms using the backtracking line search. Use them to minimize the Rosenbrock function:\n",
-    "### <center> $f(x,y)=10(y-x^2)^2 + (1-x)^2$ <center>\n",
-    "### where initial step length $\\alpha_{0} = 1$, $\\overline{\\alpha} = 1$, $\\rho = \\frac{1}{2}$, $c = 10^{-4}$. Try the initial point $\\overline{x}_{0}^{T} = [1.2, 1.2]$ and then the more difficult point $\\overline{x}_{0}^{T} = [-1.2, 1]$. \n",
+    "### Program the steepest descent and Newton algorithms using the backtracking line search. Use them to minimize the Rosenbrock function $f(x,y)=10(y-x^2)^2 + (1-x)^2$. \n",
+    "### where initial step length $\\alpha_{0} = 1$, $\\overline{\\alpha} = 1$, $\\rho = \\frac{1}{2}$, $c = 10^{-4}$. Use initial point $\\overline{x}_{0}^{T} = [1.2, 1.2]$ and then the more difficult point $\\overline{x}_{0}^{T} = [-1.2, 1]$. \n",
     "\n",
     "### The gradient of the Rosenbrock function is: \n",
-    "### <center> $\\nabla f = \\left[\\begin{array}{c} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 40x^3 - 40xy +2x - 2 \\\\ 20(y-x^2) \\end{array}\\right]$ <center>\n",
+    "### $\\nabla f = \\left[\\begin{array}{c} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 40x^3 - 40xy +2x - 2 \\\\ 20(y-x^2) \\end{array}\\right]$\n",
     "\n",
-    "# fef 3ef"
+    "### "
    ],
    "metadata": {}
   },
