--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -48,7 +48,7 @@
     "### Initial step length $\\alpha_{0} = 1$, $\\overline{\\alpha} = 1$, $\\rho = \\frac{1}{2}$, $c = 10^{-4}$. Use initial point $\\overline{x}_{0}^{T} = [1.2, 1.2]$ and then the more difficult point $\\overline{x}_{0}^{T} = [-1.2, 1]$. \n",
     "\n",
     "### The gradient and hessian of the Rosenbrock function is: \n",
-    "### $\\nabla f = \\left[\\begin{array}{c} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 40x^3 - 40xy +2x - 2 \\\\ 20(y-x^2) \\end{array}\\right]$,  &ensp; $\\nabla^{2} f = \\left[\\begin{array}{c} \\frac{\\partial f_{x}}{\\partial x} \\frac{\\partial f_{x}}{\\partial y} \\\\ \\frac{\\partial f_{y}}{\\partial x} \\frac{\\partial f_{y}}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 120x^2 - 40y + 2 \\ -40x  \\\\ -40x \\ 20 \\end{array}\\right]$"
+    "### $\\nabla f = \\left[\\begin{array}{c} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 40x^3 - 40xy +2x - 2 \\\\\\ 20(y-x^2) \\end{array}\\right]$,  &ensp; $\\nabla^{2} f = \\left[\\begin{array}{c} \\frac{\\partial f_{x}}{\\partial x} \\frac{\\partial f_{x}}{\\partial y} \\\\ \\frac{\\partial f_{y}}{\\partial x} \\frac{\\partial f_{y}}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 120x^2 - 40y + 2 \\ -40x  \\\\ -40x \\ 20 \\end{array}\\right]$"
    ],
    "metadata": {}
   },
