added code for problem 1

--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -1,43 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# MATH 693A Advanced Numerical Methods: Computational Optimization Homework 1 "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Setup"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "source": [
-    "CURR_DIR = os.getcwd()\n",
-    "CURR_DIR"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'/Users/willmcgrath/Documents/GitHub/math_693A_class/MATH-693A-Advanced-Numerical-Methods/python'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
    "metadata": {}
   },
   {
@@ -63,49 +41,51 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [],
+   "cell_type": "code",
+   "execution_count": 120,
+   "source": [
+    "a = np.array([4, 8])\n",
+    "l1 = np.linalg.norm(a)\n",
+    "\n",
+    "print(4*np.sqrt(5))\n",
+    "print(l1)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "8.94427190999916\n",
+      "8.94427190999916\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "source": [
-    "def test_obj_func(xbar_k):\n",
+    "def ex_obj_func(xbar_k):\n",
     "    x1 = xbar_k[0]\n",
     "    x2 = xbar_k[1]\n",
     "    return (x1 + x2**2)**2\n",
     "\n",
-    "def test_gradient(xbar_k):\n",
+    "def ex_gradient(xbar_k):\n",
     "    x1 = xbar_k[0]\n",
     "    x2 = xbar_k[1]\n",
-    "    return np.array([2*(x1 + x2**2), 4*x2*(x1 + x2**2)])\n",
-    "\n",
-    "xbar_0_trans  = [1, 1]\n",
-    "pbar_0 = - (test_gradient(xbar_0_trans)) / (np.linalg.norm(test_gradient(xbar_0_trans)))\n",
-    "alpha_0 = 1\n",
-    "rho = 1/2\n",
-    "c = 10**-4\n",
-    "\n",
-    "new_alpha = alpha_0\n",
-    "xbar_1 = xbar_0_trans + alpha_0*pbar_0 \n",
-    "\n",
-    "#first_input = xbar_0_trans.T\n",
-    "#while test_obj_func()\n",
-    "\n",
-    "print(pbar_0)\n",
-    "print(xbar_1)"
+    "    return np.array([2*(x1 + x2**2), 4*x2*(x1 + x2**2)])"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "source": [
     "# need to add space in matrices above\n",
-    "# functions \n",
-    "def objective_func(xbar_k):\n",
+    "# functions in problem 1\n",
+    "def obj_func(xbar_k):\n",
     "    x = xbar_k[0]\n",
     "    y = xbar_k[1]\n",
     "\n",
@@ -128,21 +108,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "source": [
-    "a = np.array([4, 8])\n",
-    "l1 = np.linalg.norm(a)\n",
-    "l1"
+    "# steepest descent algorithm (gradient descent using backtracking line search)\n",
+    "# the backtracking algorithm only makes use of the first Wolfe condition, the Armijo condition\n",
+    "# we do not have to make use of the second Wolfe condition, only condition we have to satisfy is the Armijo condition\n",
+    "# linear convergence\n",
+    "\n",
+    "def steepest_descent(objective_func, grad, val):\n",
+    "    # set alpha_0 = 1, rho = 1/2, c = 10^-4\n",
+    "    rho = 1/2\n",
+    "    c = 10**-4\n",
+    "    i = 1\n",
+    "    xbar_trans = [1, 1] # use the initial step xbar_0_trans = [1, 1] \n",
+    "    i_list, xbar_trans_list, obj_func_xbar_list, pbar_list, alpha_list  = [], [], [], [], []\n",
+    "    while np.abs(objective_func(xbar_trans)) > val: \n",
+    "        if i > 1:\n",
+    "            xbar_trans = xbar_trans + alpha * pbar_k\n",
+    "\n",
+    "         # find descent direction pbar_k\n",
+    "        pbar_k = - (grad(xbar_trans)) / (np.linalg.norm(grad(xbar_trans)))\n",
+    "        alpha = 1\n",
+    "        while(objective_func(xbar_trans + alpha * pbar_k) > objective_func(xbar_trans) + c * alpha * np.dot(pbar_k, grad(xbar_trans))):\n",
+    "            alpha = rho * alpha \n",
+    "\n",
+    "    \n",
+    "        i_list.append(i)\n",
+    "        xbar_trans_list.append(xbar_trans)\n",
+    "        obj_func_xbar_list.append(objective_func(xbar_trans))\n",
+    "        pbar_list.append(pbar_k)\n",
+    "        alpha_list.append(alpha)\n",
+    "        i += 1\n",
+    "\n",
+    "    steepest_descent_df = pd.DataFrame(\n",
+    "        [[i_list, xbar_trans_list, obj_func_xbar_list, pbar_list, alpha_list]], \n",
+    "        columns=['iteration', 'xbar', 'f(xbar)', 'pbar', 'alpha']\n",
+    "    ).explode(['iteration', 'xbar', 'f(xbar)', 'pbar', 'alpha']).reset_index(drop=True)\n",
+    "\n",
+    "    return steepest_descent_df\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "source": [
-    "4*np.sqrt(5)"
+    "# test example in textbook f(x) = (x1 + x2^2)^2, starting x0= [1,1]\n",
+    "tb_ex_sd_df = steepest_descent(ex_obj_func, ex_gradient, 10**-5)\n",
+    "tb_ex_sd_df"
    ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  iteration                                           xbar   f(xbar)  \\\n",
+       "0         1                                         [1, 1]         4   \n",
+       "1         2      [0.5527864045000421, 0.10557280900008414]  0.318019   \n",
+       "2         3   [-0.42564105564355503, -0.10101786174027069]  0.172587   \n",
+       "3         4    [0.06445647768904117, -0.20003507146315053]  0.010914   \n",
+       "4         5   [-0.05160030136906793, -0.15360421927780668]  0.000784   \n",
+       "5         6  [-0.021728147459245596, -0.16278119703673616]  0.000023   \n",
+       "6         7  [-0.029156872069429317, -0.16036268366773224]  0.000012   \n",
+       "7         8   [-0.02543724924043995, -0.16155566106590924]       0.0   \n",
+       "\n",
+       "                                          pbar     alpha  \n",
+       "0   [-0.4472135954999579, -0.8944271909999159]         1  \n",
+       "1  [-0.9784274601435972, -0.20659067074035484]         1  \n",
+       "2   [0.9801950666651924, -0.19803441944575964]       0.5  \n",
+       "3    [-0.9284542324648728, 0.3714468174827508]     0.125  \n",
+       "4    [0.9559089251143147, -0.2936632882857434]   0.03125  \n",
+       "5     [-0.950876750103516, 0.3095697112325035]  0.007812  \n",
+       "6    [0.9522234442212776, -0.3054022139333104]  0.003906  \n",
+       "7     [-0.951560966704014, 0.3074601220407653]  0.000977  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>xbar</th>\n",
+       "      <th>f(xbar)</th>\n",
+       "      <th>pbar</th>\n",
+       "      <th>alpha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[-0.4472135954999579, -0.8944271909999159]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[0.5527864045000421, 0.10557280900008414]</td>\n",
+       "      <td>0.318019</td>\n",
+       "      <td>[-0.9784274601435972, -0.20659067074035484]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[-0.42564105564355503, -0.10101786174027069]</td>\n",
+       "      <td>0.172587</td>\n",
+       "      <td>[0.9801950666651924, -0.19803441944575964]</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[0.06445647768904117, -0.20003507146315053]</td>\n",
+       "      <td>0.010914</td>\n",
+       "      <td>[-0.9284542324648728, 0.3714468174827508]</td>\n",
+       "      <td>0.125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[-0.05160030136906793, -0.15360421927780668]</td>\n",
+       "      <td>0.000784</td>\n",
+       "      <td>[0.9559089251143147, -0.2936632882857434]</td>\n",
+       "      <td>0.03125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>[-0.021728147459245596, -0.16278119703673616]</td>\n",
+       "      <td>0.000023</td>\n",
+       "      <td>[-0.950876750103516, 0.3095697112325035]</td>\n",
+       "      <td>0.007812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>[-0.029156872069429317, -0.16036268366773224]</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>[0.9522234442212776, -0.3054022139333104]</td>\n",
+       "      <td>0.003906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>[-0.02543724924043995, -0.16155566106590924]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[-0.951560966704014, 0.3074601220407653]</td>\n",
+       "      <td>0.000977</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 130
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
@@ -151,6 +297,8 @@
    "execution_count": null,
    "source": [
     "# steepest descent algorithm (gradient descent using backtracking line search)\n",
+    "# the backtracking algorithm only makes use of the first Wolfe condition, the Armijo condition\n",
+    "# we do not have to make use of the second Wolfe condition, only condition we have to satisfy is the Armijo condition\n",
     "# linear convergence\n",
     "\n",
     "def steepest_descent():\n",
