--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# MATH 693A Advanced Numerical Methods: Computational Optimization Homework 1 "
+    "# MATH 693A Advanced Numerical Methods: Computational Optimization HW 1 "
    ],
    "metadata": {}
   },
