--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -117,7 +117,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Steepest Descent"
+    "### Steepest Descent\n",
+    "\n",
+    "## $ \\bar{p_{k}}^{SD} =  -\\frac{\\nabla f(\\bar{x}_{k})}{|\\nabla f(\\bar{x}_{k})|}$"
    ],
    "metadata": {}
   },
@@ -759,7 +761,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Newton Method"
+    "### Newton Method\n",
+    "\n",
+    "## $ \\bar{p_{k}}^{N} =  - \\begin{bmatrix} \\nabla^{2} f(\\bar{x}_{k}) \\end{bmatrix}^{-1} \\nabla f(\\bar{x}_{k}) $"
    ],
    "metadata": {}
   },
@@ -770,6 +774,7 @@
     "# newton method algorithm (newton method using backtracking line search)\n",
     "# the backtracking algorithm only makes use of the first Wolfe condition, the Armijo condition\n",
     "# we do not have to make use of the second Wolfe condition, only condition we have to satisfy is the Armijo condition\n",
+    "# quadratic convergence\n",
     "\n",
     "def newton_method(x0, objective_func, grad, hess, val, abs_stop=True):\n",
     "    # set alpha_0 = 1, rho = 1/2, c = 10^-4\n",
