--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -27,7 +27,7 @@
     "### Initial step length $\\alpha_{0} = 1$, $\\overline{\\alpha} = 1$, $\\rho = \\frac{1}{2}$, $c = 10^{-4}$. Use initial point $\\overline{x}_{0}^{T} = [1.2, 1.2]$ and then the more difficult point $\\overline{x}_{0}^{T} = [-1.2, 1]$. \n",
     "\n",
     "### The gradient and hessian of the Rosenbrock function is: \n",
-    "### $\\nabla f = \\left[\\begin{array}{c} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 400x^3 - 400xy +2x - 2 \\\\ 200(y-x^2) \\end{array}\\right]$,  &ensp; $\\nabla^{2} f = \\left[\\begin{array}{c} \\frac{\\partial f_{x}}{\\partial x} \\frac{\\partial f_{x}}{\\partial y} \\\\ \\frac{\\partial f_{y}}{\\partial x} \\frac{\\partial f_{y}}{\\partial y} \\end{array}\\right] = \\begin{bmatrix} 1200x^2 - 400y + 2 \\ -400x  \\\\ -400x \\\\ 200 \\end{bmatrix}$\n",
+    "### $\\nabla f = \\left[\\begin{array}{c} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{array}\\right] = \\left[\\begin{array}{c} 400x^3 - 400xy +2x - 2 \\\\ 200(y-x^2) \\end{array}\\right]$,  &ensp; $\\nabla^{2} f = \\left[\\begin{array}{c} \\frac{\\partial f_{x}}{\\partial x} \\frac{\\partial f_{x}}{\\partial y} \\\\ \\frac{\\partial f_{y}}{\\partial x} \\frac{\\partial f_{y}}{\\partial y} \\end{array}\\right] = \\begin{bmatrix} 1200x^2 - 400y + 2 & -400x  \\\\ -400x & 200 \\end{bmatrix}$\n",
     "\n",
     "### The only minimum is at $(x,y)=(1,1)$ where $f(1,1)=0$."
    ],
