--- a/python/Homework1.ipynb
+++ b/python/Homework1.ipynb
@@ -2676,7 +2676,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Please refer to word doc."
+    "### Please refer to word document. "
    ],
    "metadata": {}
   },
@@ -2690,7 +2690,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Please refer to word doc."
+    "### Please refer to word document."
    ],
    "metadata": {}
   }
