--- a/python/homework2.ipynb
+++ b/python/homework2.ipynb
@@ -3,16 +3,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# MATH 693A Advanced Numerical Methods: Computational Optimization HW 2"
+    "# MATH 693A Advanced Numerical Methods: Computational Optimization HW 2\n",
+    "### By Will McGrath"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 273,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import random\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import interpolate"
    ],
@@ -22,7 +24,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Problem 1\n",
+    "# Problem 1 and 2\n",
     "### Use  $c = 10^{-4}$, $c_2 = 0.9$, and $ \\alpha_{max} = 1 $"
    ],
    "metadata": {}
@@ -607,22 +609,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 281,
    "source": [
     "# LS/Strong Wolfe Conditions algorithm\n",
-    "def strong_wolfe_conditions(objective_func, xbar_trans, alpha, pbar_k):\n",
+    "def strong_wolfe_conditions(obj_func, grad, xbar_trans, alpha, pbar_k):\n",
     "    alpha_0 = 0\n",
-    "    alpha_1 = # TODO\n",
+    "    alpha = 0.1\n",
     "    alpha_max = 1\n",
     "    c1 = 10**-4\n",
     "    c2 = 0.9 \n",
     "\n",
     "    while True:\n",
-    "        if (phi(objective_func, xbar_trans, alpha_1, pbar_k) > phi(objective_func, xbar_trans, alpha_0, pbar_k)):\n",
-    "            pass\n",
+    "        phi_alpha_i = phi(obj_func, xbar_trans, alpha, pbar_k)\n",
+    "        cond1 = (phi_alpha_i > phi(obj_func, xbar_trans, 0, pbar_k) + c1 * alpha * derphi(grad, xbar_trans, 0, pbar_k))\n",
+    "        cond2 = ((phi_alpha_i >= phi(obj_func, xbar_trans, alpha, pbar_k)) and i > 1)\n",
+    "        if cond1 or cond2: \n",
+    "            alpha_star = zoom(alpha, alpha, obj_func, grad, xbar_trans, pbar_k)\n",
+    "            return alpha_star\n",
     "\n",
-    "    alpha_0 = alpha_1\n",
+    "    alpha = alpha\n",
     "    alpha_1 = (alpha_1 + alpha_max) / 2\n",
+    "    alpha_ip1 = random.random(alpha*100, alpha_max*100) / 100\n",
     "\n",
     "    return "
    ],
@@ -640,7 +647,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "I computed..."
+    "=> I computed $\\alpha_{i+1}$ by randomly choosing a value in [$\\alpha_{i}$, $\\alpha_{max}$]. "
    ],
    "metadata": {}
   },
@@ -655,7 +662,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The interpolation method..."
+    "=> I used the Hermite-based cubic interpolation method."
    ],
    "metadata": {}
   },
@@ -663,15 +670,14 @@
    "cell_type": "markdown",
    "source": [
     "# Problem 5 \n",
-    "### You should state in your HW the value of epsilon used\n",
-    "- epsilons are in safeguards"
+    "### You should state in your HW the value of epsilon used"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "The episilons..."
+    "=> The epsilons are located in the safeguards conditions, which are located in the interpolation function. I used $\\epsilon_1 = \\epsilon_2 = 0.1 $. "
    ],
    "metadata": {}
   },
@@ -685,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 271,
    "source": [
     "sd_df = steepest_descent([1.2, 1.2], objective_func, gradient, 10**-8)\n",
     "sd_xbar_list = sd_df['xbar'].to_list()\n",
@@ -783,7 +789,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 179
+     "execution_count": 271
     }
    ],
    "metadata": {}
@@ -1114,31 +1120,31 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Compare..."
+    "=> The number of iterations for Newton's Method is significantly less than the number of iterations in Steepest Descent. As we can see in the plot above, Steepest Descent converges linearly (constant in a small window) and Newton's Method converges to the minimum quadratically. Newton's Method only required 8 iterations while Steepest Descent required 7612 iterations. "
    ],
    "metadata": {}
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "fcc29b29288bfae7cd1f9163060093e50b801b38050887fcfbbbb4f16f6170ab"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.3",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.3 64-bit ('.venv': venv)"
-  },
-  "interpreter": {
-   "hash": "fcc29b29288bfae7cd1f9163060093e50b801b38050887fcfbbbb4f16f6170ab"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
